--- a/src/main/resources/templates/graph.html
+++ b/src/main/resources/templates/graph.html
@@ -18,6 +18,7 @@
 </head>
 <body>
 <h1>Graph Manager</h1>
+<p><a th:href="@{/graph/view}">Graph View</a></p>
 
 <div th:if="${success}" class="message success" th:text="${success}"></div>
 <div th:if="${error}" class="message error" th:text="${error}"></div>
