Split admin graph pages

--- a/src/main/resources/templates/graph-view.html
+++ b/src/main/resources/templates/graph-view.html
@@ -22,7 +22,7 @@
 <body>
 <div class="container">
     <h1>Graph View</h1>
-    <p><a th:href="@{/graph}">Table View</a></p>
+    <p><a th:href="@{/admin/nodes}">Admin</a></p>
     <div class="layout">
         <div id="network"></div>
         <aside class="taskbar">
