--- a/src/main/resources/templates/admin/edges.html
+++ b/src/main/resources/templates/admin/edges.html
@@ -24,7 +24,7 @@
     <nav>
         <a th:href="@{/admin/nodes}">Nodes</a>
         <a th:href="@{/admin/edges}">Edges</a>
-        <a th:href="@{/admin/phones}">Phones</a>
+        <a th:href="@{/admin/users}">Users</a>
         <a th:href="@{/graph/view}">Graph View</a>
         <form th:action="@{/logout}" method="post" class="inline">
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
